# compose-ai-contrib

./: .gitignore  LICENSE  README.md  SETUP.md  baselines.json  settings.gradle.kts
.github/scripts/: make-previews-envelope.py  run-preview-pipeline.sh
.github/workflows/: amper-android.yml  amper-apply.yml  apply-skip-render.yml  bazel-apply.yml  bazel.yml  buck2-apply.yml  buck2.yml  compose-preview-scripting.yml  contract-tests.yml  scripting-apply.yml
amper-android/: README.md  amper  module.yaml
amper-android/src/: AndroidManifest.xml  Greeting.kt  MainActivity.kt  Notifications.kt
amper-cmp-desktop/: README.md  amper.bat  module.yaml
amper-cmp-desktop/src/: Greeting.kt
bazel/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  _discover.sh  compose_preview.bzl
bazel-apk/: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  compose_preview.bzl  maven_install.json
bazel-apk/app/src/main/: AndroidManifest.xml
bazel-apk/app/src/main/kotlin/com/example/bazelsample/: Greeting.kt  MainActivity.kt  Notifications.kt
bazel-desktop/: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  README.md  compose_preview.bzl  maven_install.json
bazel-desktop/app/src/main/kotlin/com/example/bazeldesktop/: Greeting.kt
bazel/app/res/values/: pseudolocale_strings.xml
buck2/: .buckconfig  BUCK  README.md  compose_preview.bzl
buck2/app/res/mipmap-anydpi-v26/: ic_launcher_round.xml
buck2/toolchains/: BUCK
bundle-producer/: build.gradle.kts
bundle-producer/src/main/kotlin/ee/schimke/composeai/contrib/bundle/: BundleFormat.kt  BundleProducerCli.kt  BundleWriter.kt  Coordinates.kt  EmbeddedVerifier.kt  PreviewManifest.kt
bundle-producer/src/test/kotlin/ee/schimke/composeai/contrib/bundle/: BundleProducerCliTest.kt  BundleWriterTest.kt  CoordinatesTest.kt  EmbeddedVerifierTest.kt
bundle-producer/src/test/kotlin/ee/schimke/composeai/contrib/bundle/depfixture/: DepHelper.kt
bundle-producer/src/test/kotlin/ee/schimke/composeai/contrib/bundle/modulefixture/: ModuleFixtures.kt
compose-preview-scripting/: README.md  build.gradle.kts
compose-preview-scripting/demo/: README.md  build.gradle.kts
compose-preview-scripting/demo/scripts/: audit-boxes.composepreview.kts  inspect.composepreview.kts  list.composepreview.kts
compose-preview-scripting/demo/src/main/kotlin/demo/: Previews.kt
compose-preview-scripting/renderer-desktop/: build.gradle.kts
compose-preview-scripting/renderer-desktop/src/main/kotlin/ee/schimke/composeai/renderer/: DesktopRendererMain.kt
compose-preview-scripting/src/main/kotlin/ee/schimke/composeai/scripting/: ComposePreviewScript.kt  Main.kt  RenderedPreview.kt  ScriptRunner.kt  ScriptState.kt
compose-preview-scripting/src/test/kotlin/ee/schimke/composeai/scripting/: AnnotateA11yTest.kt  ScriptRunnerTest.kt
contract-tests/amper-cmp-desktop/: build.gradle.kts
contract-tests/amper-cmp-desktop/src/main/kotlin/ee/schimke/composeai/contrib/: AmperBundleEmitter.kt  PreviewProducer.kt
contract-tests/amper-cmp-desktop/src/test/kotlin/ee/schimke/composeai/contrib/: AmperContractTest.kt
docs/: amper.md  bazel.md  portable-bundles.md
gradle/: libs.versions.toml
