# Bazel sample — Android Compose APK target (opt-in, known-fragile).
#
# Pulls rules_kotlin / rules_android / rules_jvm_external to compile a
# tiny `@Composable @Preview` + `@NotificationPreview` into a real APK.
# Runs on Kotlin 2.x + the bundled Kotlin Compose compiler plugin
# (`org.jetbrains.kotlin:kotlin-compose-compiler-plugin-embeddable`),
# i.e. the post-K2 plugin model rather than the standalone
# `androidx.compose.compiler:compiler` jar.
#
# Kept in a sibling directory to `samples/bazel/` (resources-only) so the
# Android SDK / Maven toolchain wiring here doesn't leak into the
# resources job's module evaluation. The APK target is not on the
# default CI path — see `.github/workflows/bazel.yml` for the opt-in
# `bazel-build-apk` job (still `continue-on-error: true` while we shake
# out the Android SDK toolchain registration under rules_android 0.7.x).

module(
    name = "compose_ai_tools_bazel_apk_sample",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "rules_kotlin", version = "2.1.3")

# rules_android 0.7.2 pulls rules_java 9.3.0, whose `java_common_internal.bzl`
# calls `ctx.fragments.java.use_header_compilation_direct_deps()` — a builtin
# java-fragment method that does NOT exist in Bazel 8.x. Building this module on
# Bazel 8.3.0 therefore failed analysis of `//:bazel_sample_apk`
# ("'java' value has no field or method 'use_header_compilation_direct_deps'").
# rules_android 0.7.2 is itself tested against Bazel 9.0.0rc3, so `.bazelversion`
# here is pinned to 9.0.0. See issue #14. (`.bazelversion` is per-directory, so
# the resources-only `bazel/` sample keeps using bazelisk's default.)
bazel_dep(name = "rules_android", version = "0.7.2")

# Android SDK — picks up $ANDROID_HOME from the environment. On the
# GitHub `ubuntu-latest` runner, `android-actions/setup-android@v4`
# installs platform 34 + build-tools 34.0.0 and exports ANDROID_HOME.
android_sdk_repository_extension = use_extension(
    "@rules_android//rules/android_sdk_repository:rule.bzl",
    "android_sdk_repository_extension",
)
use_repo(android_sdk_repository_extension, "androidsdk")
register_toolchains("@androidsdk//:all")

# Maven artifact graph. No `lock_file =` until the APK target goes
# green organically and a successful resolution can be captured for
# repinning. Until then the build resolves Maven on every run; the
# workflow is opt-in and `continue-on-error: true`, so the
# non-hermetic cost is bounded.
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    aar_import_bzl_label = "@rules_android//rules:rules.bzl",
    artifacts = [
        "androidx.activity:activity-compose:1.10.1",
        "androidx.compose.foundation:foundation:1.7.5",
        "androidx.compose.material3:material3:1.3.1",
        "androidx.compose.runtime:runtime:1.7.5",
        "androidx.compose.ui:ui:1.7.5",
        "androidx.compose.ui:ui-tooling-preview:1.7.5",
        "androidx.core:core-ktx:1.13.1",
        "org.jetbrains.kotlin:kotlin-compose-compiler-plugin-embeddable:2.1.0",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    use_starlark_android_rules = True,
)
use_repo(maven, "maven")
